--- a/src/pages/ua/affiliate/index.astro
+++ b/src/pages/ua/affiliate/index.astro
@@ -23,8 +23,8 @@ const t = useTranslations(lang);
                     <a href="#steps" class="btn bg-base-300">Етапи співпраці</a>
                 </div>
             </div>
-            <div>
-                <Picture class="rounded-box max-w-[500px] object-cover object-center" width='500' height='600' loading="eager" src={affiliate} alt="Affiliate program Vratskyi" formats={['avif', 'webp']} />
+            <div class="order-first lg:order-last">
+                <Picture class="rounded-box mx-auto max-w-[350px] lg:max-w-[400px] object-cover object-center" width='500' height='600' loading="eager" src={affiliate} alt="Affiliate program Vratskyi" formats={['avif', 'webp']} />
             </div>
         </section>
         
@@ -102,38 +102,38 @@ const t = useTranslations(lang);
                 <div class="mt-20 grid place-content-center place-items-center gap-5 w-full">
 
                     <div class="p-5 lg:p-16 rounded-box bg-base-300 col-span-2 relative grid gap-y-5 place-self-stretch animate">
-                        <span class="text-5xl absolute top-5 left-5 font-black text-primary">1</span>
+                        <span class="text-3xl lg:text-5xl absolute top-5 left-5 font-black text-primary">1</span>
                         <h3 class="font-black text-2xl">Пошук потенційних клієнтів</h3>
                         <p>
                             Використовуйте свої контакти, рекламні дошки, беріть участь у форумах та інших онлайн-спільнотах, де можуть бути зацікавлені особи. Активно поширюйте інформацію про послуги, щоб привернути увагу потенційних клієнтів.
                         </p>
                     </div>
-                    <div class="p-5 lg:p-16 rounded-box bg-base-300 relative grid gap-y-5 place-self-stretch animate">
-                        <span class="text-5xl absolute top-5 left-5 font-black text-primary">2</span>
+                    <div class="p-5 lg:p-16 rounded-box bg-base-300 col-span-2 lg:col-span-1  relative grid gap-y-5 place-self-stretch animate">
+                        <span class="text-3xl lg:text-5xl absolute top-5 left-5 font-black text-primary">2</span>
                         <h3 class="font-black text-2xl">З'ясування потреб клієнта</h3>
                         <p>
                             З'ясуйте, у чому саме полягає потреба клієнта і які завдання чи проблеми він хоче вирішити. Проведіть детальний аналіз його запитів та очікувань, щоб запропонувати найефективніше рішення для його потреб.
                         </p>
                     </div>
-                    <div class="p-5 lg:p-16 rounded-box bg-base-300 relative grid gap-y-5 place-self-stretch animate">
-                        <span class="text-5xl absolute top-5 left-5 font-black text-primary">3</span>
+                    <div class="p-5 lg:p-16 rounded-box bg-base-300 col-span-2 lg:col-span-1  relative grid gap-y-5 place-self-stretch animate">
+                        <span class="text-3xl lg:text-5xl absolute top-5 left-5 font-black text-primary">3</span>
                         <h3 class="font-black text-2xl">Презентація послуг</h3>
                         <p>
                             Покажіть клієнтам переваги та цінність послуг, виокремлюючи їхні конкурентні переваги та способи, якими вони можуть допомогти вирішити їхні проблеми або задовольнити потреби. Надайте детальну інформацію про мої послуги та приклади успішних проєктів.
                         </p>
                     </div>
                     <div class="p-5 lg:p-16 rounded-box bg-base-300 col-span-2 relative grid gap-y-5 place-self-stretch animate">
-                        <span class="text-5xl absolute top-5 left-5 font-black text-primary">4</span>
+                        <span class="text-3xl lg:text-5xl absolute top-5 left-5 font-black text-primary">4</span>
                         <h3 class="font-black text-2xl">Перенаправлення клієнта</h3>
                         <p>Після того як клієнт зацікавлений у послугах, направте його до мене для детальнішого обговорення майбутнього проєкту та укладення угоди. Надайте йому мої контактні дані та переконайтеся, що він готовий до спілкування.</p>
                     </div>
-                    <div class="p-5 lg:p-16 rounded-box bg-base-300 relative grid gap-y-5 place-self-stretch animate">
-                        <span class="text-5xl absolute top-5 left-5 font-black text-primary">5</span>
+                    <div class="p-5 lg:p-16 rounded-box bg-base-300 col-span-2 lg:col-span-1  relative grid gap-y-5 place-self-stretch animate">
+                        <span class="text-3xl lg:text-5xl absolute top-5 left-5 font-black text-primary">5</span>
                         <h3 class="font-black text-2xl">Укладення угоди</h3>
                         <p>Після ретельного з'ясування всіх потреб клієнта і врахування всіх його побажань, укладається договір, в якому будуть чітко вказані всі необхідні положення, умови і вартість пропонованих послуг.</p>
                     </div>
-                    <div class="p-5 lg:p-16 rounded-box bg-base-300 relative grid gap-y-5 place-self-stretch animate">
-                        <span class="text-5xl absolute top-5 left-5 font-black text-primary">6</span>
+                    <div class="p-5 lg:p-16 rounded-box bg-base-300 col-span-2 lg:col-span-1 relative grid gap-y-5 place-self-stretch animate">
+                        <span class="text-3xl lg:text-5xl absolute top-5 left-5 font-black text-primary">6</span>
                         <h3 class="font-black text-2xl">Оплата комісії</h3>
                         <p>Після успішного підписання договору та оплати авансу клієнтом ви отримуєте свої комісійні зручним для вас способом у розмірі до 10% від угоди, що більша сума угоди, то більша комісія, але не більше 10% від угоди.</p>
                     </div>
