--- a/src/components/head/Head.astro
+++ b/src/components/head/Head.astro
@@ -62,4 +62,6 @@ const { title } = Astro.props;
 
       gtag('config', 'G-JY9LE7FG3L');
     </script>
+    <!-- freelancehunt -->
+    <meta name='freelancehunt' content='37107d57aa0933d'>
   </head>
